remove theme readme

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "sickdaflip/foundation",
+  "name": "sickdaflip/mage_foundation",
   "type": "magento-theme",
   "license": "MIT",
   "description": "Magento 1.9.3. Theme",
