change checkout payments via local.xml

--- a/skin/frontend/foundation/default/config-default.yml
+++ b/skin/frontend/foundation/default/config-default.yml
@@ -3,6 +3,10 @@ BROWSERSYNC:
   # URL of local development server goes here (ex. http://localsite.dev)
   url: "http://magento.gastro.lan"
 
+CERT:
+  key: "/var/customers/webs/magento/cert/private.key"
+  crt: "/var/customers/webs/magento/cert/magento.gastro.lan-cert.crt"
+
 # Autoprefixer will make sure your CSS works with these browsers
 COMPATIBILITY:
   - "last 2 versions"
