--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -24,53 +24,53 @@
     "responsive"
   ],
   "dependencies": {
-    "components-font-awesome": "^4.7.0",
-    "foundation-sites": "^6.4.4-rc1",
-    "google-fonts": "^1.0.0",
-    "jquery": "^3.3.1",
+    "components-font-awesome": "~5.0.6",
+    "foundation-sites": "~6.5.0-rc.1",
+    "google-fonts": "~1.0.0",
+    "jquery": "~3.3.1",
     "lightgallery": "git+https://github.com/sachinchoolur/lightGallery.git",
-    "minify": "^3.0.5",
-    "motion-ui": "~1.2.2",
+    "minify": "~3.0.5",
+    "motion-ui": "~2.0.3",
     "pwstrength-foundation": "git+https://github.com/edtownend/jquery.pwstrength.foundation.git",
-    "what-input": "^4.1.3"
+    "what-input": "~5.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.7.2",
-    "browser-sync": "^2.24.4",
+    "babel-core": "~6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "~6.24.1",
+    "babel-register": "~6.26.0",
+    "browser-sync": "~2.24.5",
     "clean-css": "github:jakubpawlowicz/clean-css#master",
-    "dateformat": "^3.0.3",
+    "dateformat": "~3.0.3",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.3",
-    "gulp-clean-css": "^3.9.4",
-    "gulp-cli": "^1.2.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-extname": "^0.2.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-phpcbf": "^0.1.2",
-    "gulp-phpcs": "^2.1.0",
-    "gulp-rev": "^8.1.1",
-    "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.12.1",
-    "gulp-uglify": "^1.5.4",
-    "gulp-util": "^3.0.8",
-    "gulp-zip": "^4.1.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "~7.0.1",
+    "gulp-clean-css": "~3.9.4",
+    "gulp-cli": "~2.0.1",
+    "gulp-concat": "~2.6.1",
+    "gulp-extname": "~0.2.2",
+    "gulp-if": "~2.0.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "~1.5.0",
+    "gulp-phpcbf": "~0.1.2",
+    "gulp-phpcs": "~2.2.0",
+    "gulp-rev": "~8.1.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "~3.0.8",
+    "gulp-zip": "~4.1.0",
     "jquery-sticky": "git+https://github.com/garand/sticky.git",
-    "js-yaml": "^3.11.0",
-    "npm-update-all": "^1.0.1",
+    "js-yaml": "~3.12.0",
+    "npm-update-all": "~1.0.1",
     "owl.carousel": "git+https://github.com/OwlCarousel2/OwlCarousel2.git",
-    "panini": "^1.6.2",
-    "rimraf": "^2.4.3",
-    "style-sherpa": "^1.0.0",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^2.7.0",
-    "webpack-stream": "^3.2.0",
-    "yargs": "^3.8.0"
+    "panini": "~1.6.2",
+    "rimraf": "~2.6.2",
+    "style-sherpa": "~1.0.2",
+    "vinyl-named": "~1.1.0",
+    "webpack": "^4.14.0",
+    "webpack-stream": "^4.0.3",
+    "yargs": "^12.0.1"
   },
   "repository": {
     "type": "git",
