change foundation to 6.5.0-rc1

--- a/skin/frontend/foundation/default/config-default.yml
+++ b/skin/frontend/foundation/default/config-default.yml
@@ -63,4 +63,8 @@ PATHS:
     - "src/assets/js/opcheckout.js"
     - "node_modules/jquery/dist/jquery.min.js"
     - "src/assets/js/serviceworker-cache-polyfill.js"
+    - "node_modules/lightgallery/dist/js/lightgallery.min.js"
+    - "node_modules/lightgallery/lib/jquery.mousewheel.min.js"
+    - "node_modules/owl.carousel/dist/owl.carousel.min.js"
+    - "node_modules/pwstrength-foundation/dist/pwstrength-foundation.js"
 
