--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -24,7 +24,6 @@
     "responsive"
   ],
   "dependencies": {
-    "components-font-awesome": "~5.0.6",
     "foundation-sites": "~6.5.0-rc.2",
     "google-fonts": "~1.0.0",
     "jquery": "~3.3.1",
@@ -35,12 +34,14 @@
     "what-input": "^5.1.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "babel-core": "~6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "~6.24.1",
     "babel-register": "~6.26.0",
     "browser-sync": "^2.24.6",
     "clean-css": "github:jakubpawlowicz/clean-css#master",
+    "components-font-awesome": "https://github.com/components/font-awesome/tarball/master",
     "dateformat": "~3.0.3",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
