--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -24,25 +24,25 @@
     "responsive"
   ],
   "dependencies": {
-    "foundation-sites": "~6.5.0-rc.2",
+    "foundation-sites": "~6.5.3",
     "google-fonts": "~1.0.0",
-    "jquery": "~3.3.1",
-    "lightgallery": "git+https://github.com/sachinchoolur/lightGallery.git",
-    "minify": "~3.0.5",
+    "jquery": "^3.3.1",
+    "lightgallery": "~1.6.11",
+    "minify": "~4.1.0",
     "motion-ui": "~2.0.3",
-    "what-input": "^5.1.1"
+    "what-input": "^5.1.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.2.0",
+    "@fortawesome/fontawesome-free": "~5.7.1",
     "babel-core": "~6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "~6.24.1",
     "babel-register": "~6.26.0",
-    "browser-sync": "^2.24.6",
-    "clean-css": "github:jakubpawlowicz/clean-css#master",
-    "components-font-awesome": "https://github.com/components/font-awesome/tarball/master",
+    "browser-sync": "~2.26.3",
+    "clean-css": "~4.2.1",
+    "components-font-awesome": "~5.4.2",
     "dateformat": "~3.0.3",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "~7.0.1",
     "gulp-clean-css": "~3.9.4",
@@ -58,20 +58,19 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
-    "gulp-util": "~3.0.8",
     "gulp-zip": "~4.1.0",
-    "jquery-sticky": "git+https://github.com/garand/sticky.git",
-    "js-yaml": "~3.12.0",
+    "jquery-sticky": "~1.0.4",
+    "js-yaml": "~3.12.1",
     "npm-update-all": "~1.0.1",
-    "owl.carousel": "git+https://github.com/OwlCarousel2/OwlCarousel2.git",
-    "panini": "~1.6.2",
+    "owl.carousel": "~2.3.4",
+    "panini": "~1.6.3",
     "pwstrength-foundation": "git+https://github.com/sickdaflip/jquery.pwstrength.foundation",
-    "rimraf": "~2.6.2",
+    "rimraf": "~2.6.3",
     "style-sherpa": "~1.0.2",
     "vinyl-named": "~1.1.0",
     "webpack": "^4.16.1",
     "webpack-stream": "^4.0.3",
-    "yargs": "^12.0.1"
+    "yargs": "~12.0.5"
   },
   "repository": {
     "type": "git",
