--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -26,23 +26,23 @@
   "dependencies": {
     "foundation-sites": "~6.5.3",
     "google-fonts": "~1.0.0",
-    "jquery": "^3.3.1",
-    "lightgallery": "~1.6.11",
-    "minify": "~4.1.0",
+    "jquery": "~3.4.1",
+    "lightgallery": "^1.6.12",
+    "minify": "^4.1.1",
     "motion-ui": "~2.0.3",
-    "what-input": "^5.1.3"
+    "what-input": "^5.2.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "~5.7.1",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "babel-core": "~6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "~6.24.1",
     "babel-register": "~6.26.0",
-    "browser-sync": "~2.26.3",
+    "browser-sync": "^2.26.5",
     "clean-css": "~4.2.1",
     "components-font-awesome": "~5.4.2",
     "dateformat": "~3.0.3",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "~7.0.1",
     "gulp-clean-css": "~3.9.4",
@@ -56,19 +56,19 @@
     "gulp-phpcs": "~2.2.0",
     "gulp-rev": "~8.1.1",
     "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-zip": "~4.1.0",
     "jquery-sticky": "~1.0.4",
-    "js-yaml": "~3.12.1",
+    "js-yaml": "^3.13.1",
     "npm-update-all": "~1.0.1",
     "owl.carousel": "~2.3.4",
     "panini": "~1.6.3",
-    "pwstrength-foundation": "git+https://github.com/sickdaflip/jquery.pwstrength.foundation",
+    "pwstrength-foundation": "git+https://github.com/sickdaflip/jquery.pwstrength.foundation.git",
     "rimraf": "~2.6.3",
     "style-sherpa": "~1.0.2",
     "vinyl-named": "~1.1.0",
-    "webpack": "^4.16.1",
+    "webpack": "^4.31.0",
     "webpack-stream": "^4.0.3",
     "yargs": "~12.0.5"
   },
