--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "foundation-sites": "~6.5.3",
     "google-fonts": "~1.0.0",
+    "hamburgers": "^1.1.3",
     "jquery": "~3.4.1",
     "lightgallery": "^1.6.12",
     "minify": "^4.1.3",
