--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -24,54 +24,55 @@
     "responsive"
   ],
   "dependencies": {
-    "foundation-sites": "~6.5.3",
-    "google-fonts": "~1.0.0",
+    "foundation-sites": "^6.6.3",
+    "google-fonts": "^1.0.0",
     "hamburgers": "^1.1.3",
-    "jquery": "~3.4.1",
+    "jquery": "^3.5.1",
     "lightgallery": "^1.6.12",
+    "middleware": "^1.0.0",
     "minify": "^4.1.3",
-    "motion-ui": "~2.0.3",
+    "motion-ui": "^2.0.3",
     "what-input": "^5.2.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "babel-core": "~6.26.3",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "~6.24.1",
-    "babel-register": "~6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "browser-sync": "^2.26.7",
-    "clean-css": "~4.2.1",
-    "components-font-awesome": "~5.4.2",
-    "dateformat": "~3.0.3",
+    "clean-css": "^4.2.1",
+    "components-font-awesome": "^5.9.0",
+    "dateformat": "^3.0.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "~7.0.1",
-    "gulp-clean-css": "~3.9.4",
-    "gulp-cli": "~2.0.1",
-    "gulp-concat": "~2.6.1",
-    "gulp-extname": "~0.2.2",
-    "gulp-if": "~2.0.2",
+    "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-extname": "^0.2.2",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "~1.5.0",
-    "gulp-phpcbf": "~0.1.2",
-    "gulp-phpcs": "~2.2.0",
-    "gulp-rev": "~8.1.1",
+    "gulp-load-plugins": "^1.6.0",
+    "gulp-phpcbf": "^0.1.2",
+    "gulp-phpcs": "^2.2.0",
+    "gulp-rev": "^8.1.1",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-zip": "~4.1.0",
-    "jquery-sticky": "~1.0.4",
+    "gulp-zip": "^4.2.0",
+    "jquery-sticky": "^1.0.4",
     "js-yaml": "^3.13.1",
-    "npm-update-all": "~1.0.1",
-    "owl.carousel": "~2.3.4",
-    "panini": "~1.6.3",
+    "npm-update-all": "^1.0.1",
+    "owl.carousel": "^2.3.4",
+    "panini": "^1.6.3",
     "pwstrength-foundation": "git+https://github.com/sickdaflip/jquery.pwstrength.foundation.git",
-    "rimraf": "~2.6.3",
-    "style-sherpa": "~1.0.2",
-    "vinyl-named": "~1.1.0",
+    "rimraf": "^2.7.1",
+    "style-sherpa": "^1.0.2",
+    "vinyl-named": "^1.1.0",
     "webpack": "^4.41.2",
     "webpack-stream": "^4.0.3",
-    "yargs": "~12.0.5"
+    "yargs": "^12.0.5"
   },
   "repository": {
     "type": "git",
