--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "sickdaflip/mage_foundation",
   "type": "magento-module",
   "license": "MIT",
-  "description": "Magento 1.9.3. Theme",
+  "description": "OpenMage LTS 20.0.1 Theme",
   "authors": [
     {
       "name": "SickDaFlip",
