--- a/skin/frontend/foundation/default/config-default.yml
+++ b/skin/frontend/foundation/default/config-default.yml
@@ -58,3 +58,4 @@ PATHS:
     - "node_modules/lightgallery/lib/jquery.mousewheel.min.js"
     - "node_modules/owl.carousel/dist/owl.carousel.min.js"
     - "node_modules/pwstrength-foundation/dist/pwstrength-foundation.js"
+    - "node_modules/jquery-lazy/jquery.lazy.js"
