--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -33,6 +33,7 @@
     "gulp-sass-glob": "^1.1.0",
     "hamburgers": "^1.1.3",
     "jquery": "^3.5.1",
+    "jquery-lazy": "^1.7.11",
     "lightgallery": "^1.10.0",
     "middleware": "^1.0.0",
     "minify": "^4.1.3",
