--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -30,6 +30,7 @@
     "google-fonts": "^1.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass-glob": "^1.1.0",
     "hamburgers": "^1.1.3",
     "jquery": "^3.5.1",
