--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -24,61 +24,45 @@
     "responsive"
   ],
   "dependencies": {
-    "autoprefixer": "^9.8.6",
-    "formvalidation": "^0.6.2-dev",
-    "foundation-sites": "^6.6.3",
+    "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
+    "foundation-sites": "^6.7.4",
     "google-fonts": "^1.0.0",
-    "gulp-notify": "^3.2.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-if": "^3.0.0",
+    "gulp-load-plugins": "^2.0.7",
+    "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8",
     "hamburgers": "^1.1.3",
     "jquery": "^3.5.1",
     "jquery-lazy": "^1.7.11",
+    "js-yaml": "^4.1.0",
     "lightgallery": "^1.10.0",
-    "middleware": "^1.0.0",
-    "minify": "^4.1.3",
     "motion-ui": "^2.0.3",
+    "owl.carousel": "^2.3.4",
+    "rimraf": "^3.0.2",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^7.0.0",
     "what-input": "^5.2.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.17.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
     "browser-sync": "^2.26.14",
-    "clean-css": "^4.2.1",
-    "dateformat": "^3.0.3",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-clean-css": "^3.10.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-extname": "^0.2.2",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "^1.6.0",
-    "gulp-phpcbf": "^0.1.2",
-    "gulp-phpcs": "^2.2.0",
-    "gulp-rev": "^8.1.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "gulp-zip": "^4.2.0",
-    "jquery-sticky": "^1.0.4",
-    "js-yaml": "^3.14.1",
-    "npm-update-all": "^1.0.1",
-    "owl.carousel": "^2.3.4",
-    "panini": "^1.7.1",
+    "gulp-imagemin": "^7.1.0",
     "pwstrength-foundation": "git+https://github.com/sickdaflip/jquery.pwstrength.foundation.git",
-    "rimraf": "^2.7.1",
-    "style-sherpa": "^1.0.2",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^4.46.0",
-    "webpack-stream": "^4.0.3",
-    "yargs": "^12.0.5"
+    "sass": "^1.49.8"
   },
   "repository": {
     "type": "git",
@@ -86,10 +70,5 @@
   },
   "bugs": {
     "url": "https://github.com/sickdaflip/mage_foundation/issues"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
   }
 }
