--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -52,7 +52,8 @@
     "rimraf": "^3.0.2",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^7.0.0",
-    "what-input": "^5.2.6"
+    "what-input": "^5.2.6",
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
