--- a/skin/frontend/foundation/default/package.json
+++ b/skin/frontend/foundation/default/package.json
@@ -57,6 +57,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-filter": "^7.0.0",
     "gulp-if": "^3.0.0",
+    "gulp-image": "^6.3.1",
     "gulp-imagemin": "^8.0.0",
     "gulp-load-plugins": "^2.0.8",
     "gulp-mode": "^1.1.0",
